[package]
authors = [
	"Blake Lee (Volitank) <blake@volian.org>",
]
description = "A simple AES encoder"
license = "GPL-3.0-or-later"
name = "binlock"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
anyhow = "1.0"
atty = "0.2"
rand = "0.8"
rust-argon2 = "1.0"
rpassword = "7.0"
aes-gcm = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
clap = { version = "3.2", features = ["derive"] }
clap_complete = "*"

[profile.release]
lto = true
