[tool.poetry]
name = "binlock"
version = "0.1.0"
description = "A simple encoding and encryption program."
authors = ["Blake Lee <blake@volian.org>"]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^37.0.4"

[tool.poetry.dev-dependencies]
black = { git = "https://github.com/volitank/black.git", branch = "black-tabs" }
codespell = "^2.1.0"
isort = "^5.10.1"
mypy = "^0.941"
pre-commit = "^2.15.0"
pyupgrade = "^2.31.1"
pydocstyle = "^6.1.1"
pylint = "^2.12.2"

[tool.isort]
py_version = "auto"
balanced_wrapping = true
multi_line_output = 3
combine_as_imports = true
combine_star = true
indent = "\t"
group_by_package = true
known_first_party = ["nala"]
lexicographical = true
profile = "black"

[tool.mypy]
disallow_untyped_decorators = false
ignore_missing_imports = true
no_warn_unused_ignores = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true

[tool.pydocstyle]
add_select = "D211, D212"
ignore = "D206, D203, D213"

[tool.poetry.scripts]
binlock = "binlock.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
